fix Main.tsx on mobile devices

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -106,9 +106,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       gap: 45px;
-      padding-top: 50px;
+      padding-top: 100px;
     }
 
     .photo {
